source/cscript/CParser.cpp
#include "../include/cscript/CParser.h"
#include "../include/cscript/CEnums.h"
#include "../include/cscript/CToken.h"
#include "../include/cscript/CExpr.h"
#include "../include/cscript/CStmt.h"

#include <vector>
#include <string>
#include <memory>
#include <cctype>
#include <typeinfo>

CParser::CParser()
{

}

void CParser::initialize(std::shared_ptr<ChromaScript> console)
{
	this->console = console;
}

// 
std::vector<std::shared_ptr<CStmt>> CParser::parseTokens(std::vector<std::shared_ptr<CToken>> tokens)
{
	current = 0;
	this->tokens = tokens;
	std::vector<std::shared_ptr<CStmt>> statements;
	while (!isAtEnd())
	{
		statements.push_back(declarationStmt());
	}
	return statements;
}
std::vector<std::shared_ptr<CStmt>> CParser::parseTokensExpr(std::vector<std::shared_ptr<CToken>> tokens)
{
	current = 0;
	this->tokens = tokens;
	std::vector<std::shared_ptr<CStmt>> statements;
	while (!isAtEnd())
	{
		statements.push_back(expressionStmt(true));
	}
	return statements;
}

////////////////////////////////////////////////////////////////////////////////////////////////
//
// chromaParser Statement Eval Functions
//
////////////////////////////////////////////////////////////////////////////////////////////////

std::shared_ptr<CStmt> CParser::declarationStmt()
{
	if (match({ CTokenType::CLASS }))
	{
		return classDeclarationStmt();
	}
	if (match({ CTokenType::NAMESPACE }))
	{
		return namespaceDeclarationStmt();
	}
	// Declaration of functions or variables must always have a minimum of two type/identifier tokens
	if (isValidVarType(peek()) && isValidVarType(scry(1)))
	{
		// Build the return type
		std::shared_ptr<CToken> typeSpecifier = createTypeSpecifier(peek());
		// Check/build for scope stack
		std::vector<std::shared_ptr<CToken>> scopeStack;
		if (peek().get()->type == CTokenType::IDENTIFIER && scry(1).get()->type == CTokenType::SCOPE)
		{
			while (peek().get()->type == CTokenType::IDENTIFIER && scry(1).get()->type == CTokenType::SCOPE)
			{
				advance();
				scopeStack.push_back(previous());
				advance();
			}
		}
		if (peek().get()->type == CTokenType::IDENTIFIER && scry(1).get()->type == CTokenType::PAREN_LEFT)
		{
			return funcDeclarationStmt(typeSpecifier, scopeStack, "function");
		}
		else if (peek().get()->type == CTokenType::IDENTIFIER)
		{
			if (isArrayType(typeSpecifier))
			{
				return arrayDeclarationStmt(typeSpecifier);
			}
			else
			{
				return varDeclarationStmt(typeSpecifier);
			}
		}
		else
		{
			error(peek(), "[parser:0102] Expected identifier after type declaration.");
			synchronize();
		}
	}
	if (peek().get()->type == CTokenType::IDENTIFIER && scry(1).get()->type == CTokenType::SCOPE)
	{
		size_t last = current;
		std::vector<std::shared_ptr<CToken>> scopeStack;
		while (peek().get()->type == CTokenType::IDENTIFIER && scry(1).get()->type == CTokenType::SCOPE)
		{
			advance();
			scopeStack.push_back(previous());
			advance();
		}
		if (match({ CTokenType::CAST }))
		{
			consume(CTokenType::LESS, "[parser:0103] Expect opening angle bracket '<' after 'cast' declaration.");
			std::shared_ptr<CToken> typeSpecifier = createTypeSpecifier(peek());
			consume(CTokenType::MORE, "[parser:0104] Expect closing angle bracket '>' after type name in 'cast' declaration.");
			consume(CTokenType::CURLY_LEFT, "[parser:0105] Must define 'cast' function when defined outside class statement.");
			std::shared_ptr<CStmt> body = block();
			return std::make_shared<CStmt_Function>(
				typeSpecifier,
				std::make_shared<CToken>(CTokenType::CAST, typeSpecifier.get()->typeString(), previous().get()->line),
				false, scopeStack, body);
		}
		else
		{
			current = last;
		}
	}
	return statement();
}

std::shared_ptr<CStmt> CParser::classDeclarationStmt()
{
	std::vector<std::shared_ptr<CToken>> scopeStack;
	while (peek().get()->type == CTokenType::IDENTIFIER && scry(1).get()->type == CTokenType::SCOPE)
	{
		advance();
		scopeStack.push_back(previous());
		advance();
	}
	std::shared_ptr<CToken> name = consume(CTokenType::IDENTIFIER, "[parser:0201] Expect class name.");
	std::shared_ptr<CToken> superclass = nullptr;
	if (match({ CTokenType::INHERIT }))
	{
		superclass = consume(CTokenType::IDENTIFIER, "[parser:0202] Expect superclass name.");
	}

	std::shared_ptr<CStmt> constructor = nullptr;
	std::vector<std::shared_ptr<CStmt>> methods;
	std::vector<std::shared_ptr<CStmt>> properties;
	std::vector<std::shared_ptr<CToken>> emptyStack;
	// Check if class declaration is only a forward declaration
	if (match({ CTokenType::SEMICOLON }))
	{
		 return std::make_shared<CStmt_Class>(scopeStack, name, superclass, true, nullptr, methods, properties);
	}

	consume(CTokenType::CURLY_LEFT, "[parser:0203] Expect '{' before class body.");

	bool hasConstructor = false;
	while (!check(CTokenType::CURLY_RIGHT) && !isAtEnd())
	{
		// Build constructor function
		if (hasConstructor == false && 
			peek().get()->type == CTokenType::IDENTIFIER && 
			peek().get()->lexeme == name.get()->lexeme &&
			scry(1).get()->type == CTokenType::PAREN_LEFT)
		{
			consume(CTokenType::IDENTIFIER, "[parser:0204] Expect constructor name to match class name.");
			consume(CTokenType::PAREN_LEFT, "[parser:0205] Expect '(' after constructor name.");
			std::vector<std::shared_ptr<CToken>> paramsTypes;
			std::vector<std::string> paramsNames;
			if (!check(CTokenType::PAREN_RIGHT))
			{
				do
				{
					if (paramsTypes.size() >= 64)
					{
						error(peek(), "[parser:0206] Can't have more than 64 parameters.");
						while (peek().get()->type != CTokenType::PAREN_RIGHT)
						{
							advance();
						}
						break;
					}
					if (isValidVarType(peek()))
					{
						paramsTypes.push_back(createTypeSpecifier(peek()));
						paramsNames.push_back(consume(CTokenType::IDENTIFIER, "[parser:0207] Expect parameter name.").get()->lexeme);
					}
				} while (match({ CTokenType::COMMA }));
			}
			consume(CTokenType::PAREN_RIGHT, "[parser:0208] Expect ')' after parameters.");
			if (match({ CTokenType::SEMICOLON }))
			{
				constructor = std::make_shared<CStmt_Function>(
					name,
					std::make_shared<CToken>(CTokenType::CONSTRUCTOR, name.get()->lexeme, name.get()->line),
					true, emptyStack, paramsTypes, paramsNames, nullptr);
			}
			else
			{
				consume(CTokenType::CURLY_LEFT, "[parser:0209] Expect opening bracket '{' after 'constructor' statement.");
				std::shared_ptr<CStmt> body = block();
				constructor = std::make_shared<CStmt_Function>(
					name,
					std::make_shared<CToken>(CTokenType::CONSTRUCTOR, name.get()->lexeme, name.get()->line),
					false, emptyStack, paramsTypes, paramsNames, body);
			}
			hasConstructor = true;
		}
		// Reject multiple constructors
		else if (peek().get()->type == CTokenType::IDENTIFIER &&
			peek().get()->lexeme == name.get()->lexeme &&
			scry(1).get()->type == CTokenType::PAREN_LEFT)
		{
			consume(CTokenType::IDENTIFIER, "[parser:0210] Expect constructor name to match class name.");
			error(previous(), "[parser:0211] Class definition cannot have more than one constructor.");
			synchronize();
		}
		// Cast function builder
		if (match({ CTokenType::CAST }))
		{
			consume(CTokenType::LESS, "[parser:0212] Expect opening angle bracket '<' after 'cast' declaration.");
			std::shared_ptr<CToken> typeSpecifier = createTypeSpecifier(peek());
			consume(CTokenType::MORE, "[parser:0213] Expect closing angle bracket '>' after type name in 'cast' declaration.");
			if (match({ CTokenType::SEMICOLON }))
			{
				methods.push_back(std::make_shared<CStmt_Function>(
					typeSpecifier,
					std::make_shared<CToken>(CTokenType::CAST, typeSpecifier.get()->typeString(), name.get()->line),
					true, emptyStack, nullptr));
			}
			else
			{
				consume(CTokenType::CURLY_LEFT, "[parser:0214] Expect opening bracket '{' after 'cast' statement.");
				std::shared_ptr<CStmt> body = block();
				methods.push_back(std::make_shared<CStmt_Function>(
					typeSpecifier,
					std::make_shared<CToken>(CTokenType::CAST, typeSpecifier.get()->typeString(), name.get()->line),
					false, emptyStack, body));
			}
		}
		if (isValidVarType(peek()))
		{
			std::shared_ptr<CToken> typeSpecifier = createTypeSpecifier(peek());

			if (peek().get()->type == CTokenType::IDENTIFIER && scry(1).get()->type == CTokenType::PAREN_LEFT)
			{
				methods.push_back(funcDeclarationStmt(typeSpecifier, emptyStack, "method"));
			}
			else if (peek().get()->type == CTokenType::IDENTIFIER)
			{
				if (isArrayType(typeSpecifier))
				{
					properties.push_back(arrayDeclarationStmt(typeSpecifier));
				}
				else
				{
					properties.push_back(varDeclarationStmt(typeSpecifier));
				}
			}
			else
			{
				error(peek(), "[parser:0216] Expected identifier after type declaration.");
				synchronize();
			}
		}
	}
	// Throw warnings for uninitialized variables when the class has no constructor
	if (hasConstructor == false)
	{
		for (std::shared_ptr<CStmt> _property : properties)
		{
			if (dynamic_cast<CStmt_Variable*>(_property.get()) != nullptr)
			{
				if (std::dynamic_pointer_cast<CStmt_Variable>(_property).get()->initializer == nullptr)
				{
					console.get()->warning(std::dynamic_pointer_cast<CStmt_Variable>(_property).get()->name, 
						"[parser:0217] Class '" + name.get()->lexeme + "' has uninitialized member variable '" + 
						std::dynamic_pointer_cast<CStmt_Variable>(_property).get()->name.get()->lexeme +
						"'. Consider giving default initialization to avoid runtime errors.");
				}
			}
		}
	}
	

	consume(CTokenType::CURLY_RIGHT, "[parser:0218] Expect '}' after class body.");

	return std::make_shared<CStmt_Class>(scopeStack, name, superclass, false, constructor, methods, properties);
}
std::shared_ptr<CStmt> CParser::funcDeclarationStmt(
	std::shared_ptr<CToken> typeSpecifier, 
	std::vector<std::shared_ptr<CToken>> scopeStack, 
	std::string kind)
{
	while (peek().get()->type == CTokenType::IDENTIFIER && scry(1).get()->type == CTokenType::SCOPE)
	{
		advance();
		scopeStack.push_back(previous());
		advance();
	}
	std::shared_ptr<CToken> name = nullptr;
	if (kind != "constructor" && kind != "cast")
	{
		name = consume(CTokenType::IDENTIFIER, "Expect " + kind + " name.");
	}
	else if (kind == "constructor")
	{
		name = std::make_shared<CToken>(CTokenType::CONSTRUCTOR, typeSpecifier.get()->line);
	}
	consume(CTokenType::PAREN_LEFT, "[parser:0301] Expect '(' after " + kind + " name.");
	std::vector<std::shared_ptr<CToken>> paramsTypes;
	std::vector<std::string> paramsNames;
	if (!check(CTokenType::PAREN_RIGHT))
	{
		do
		{
			if (paramsTypes.size() >= 64)
			{
				error(peek(), "[parser:0302] Can't have more than 64 parameters.");
				while (peek().get()->type != CTokenType::PAREN_RIGHT)
				{
					advance();
				}
				break;
			}
			if (isValidVarType(peek()))
			{
				paramsTypes.push_back(createTypeSpecifier(peek()));
				paramsNames.push_back(consume(CTokenType::IDENTIFIER, "[parser:0303] Expect parameter name.").get()->lexeme);
			}
		} while (match({ CTokenType::COMMA }));
	}
	consume(CTokenType::PAREN_RIGHT, "[parser:0304] Expect ')' after parameters.");
	if (match({ CTokenType::SEMICOLON }))
	{
		return std::make_shared<CStmt_Function>(typeSpecifier, name, true, scopeStack, paramsTypes, paramsNames, nullptr);
	}
	consume(CTokenType::CURLY_LEFT, "[parser:0305] Expect '{' before " + kind + " body.");
	std::shared_ptr<CStmt> body = block();
	return std::make_shared<CStmt_Function>(typeSpecifier, name, false, scopeStack, paramsTypes, paramsNames, body);
}

std::shared_ptr<CStmt> CParser::arrayDeclarationStmt(std::shared_ptr<CToken> typeSpecifier)
{
	std::shared_ptr<CToken> name = consume(CTokenType::IDENTIFIER, "[parser:0401] Expect variable name.");
	std::shared_ptr<CExpr> initializer;
	if (match({ CTokenType::ASSIGN }))
	{
		initializer = expression();
	}
	consume(CTokenType::SEMICOLON, "[parser:0402] Expect ';' after variable declaration.");
	return std::make_shared<CStmt_Variable>(typeSpecifier, name, initializer);
}

std::shared_ptr<CStmt> CParser::varDeclarationStmt(std::shared_ptr<CToken> typeSpecifier)
{
	std::shared_ptr<CToken> name = consume(CTokenType::IDENTIFIER, "[parser:0501] Expect variable name.");
	std::shared_ptr<CExpr> initializer = nullptr;
	if (match({ CTokenType::ASSIGN }))
	{
		initializer = expression();
	}
	consume(CTokenType::SEMICOLON, "[parser:0502] Expect ';' after variable declaration.");
	return std::make_shared<CStmt_Variable>(typeSpecifier, name, initializer);
}

std::shared_ptr<CStmt> CParser::namespaceDeclarationStmt()
{
	std::shared_ptr<CToken> name = consume(CTokenType::IDENTIFIER, "[parser:0601] Expected a identifier name after namespace declaration.");
	if (match({ CTokenType::CURLY_LEFT }))
	{
		std::shared_ptr<CStmt> body = block();
		return std::make_shared<CStmt_Namespace>(name, body);
	}
	else
	{
		return nullptr;
	}
}

std::shared_ptr<CStmt> CParser::statement()
{
	if (match({ CTokenType::PRINT })) { return printStmt(); }
	if (match({ CTokenType::RETURN })) { return returnStmt(); }
	if (match({ CTokenType::BREAK })) { return breakStmt(); }
	if (match({ CTokenType::CONTINUE })) { return continueStmt(); }
	if (match({ CTokenType::TRY })) { return tryCatchStmt(); }
	if (match({ CTokenType::IF })) { return ifStmt(); }
	if (match({ CTokenType::WHILE })) { return whileStmt(); }
	if (match({ CTokenType::FOR })) { return forStmt(); }
	if (match({ CTokenType::FOREACH })) { return foreachStmt(); }
	if (match({ CTokenType::CURLY_LEFT })) { return block(); }
	return expressionStmt(false);
}

std::shared_ptr<CStmt> CParser::printStmt()
{
	std::shared_ptr<CToken> line = previous();
	std::shared_ptr<CExpr> value = expression();
	consume(CTokenType::SEMICOLON, "[parser:0701] Expect ';' after value.");
	return std::make_shared<CStmt_Print>(value, line);
}

std::shared_ptr<CStmt> CParser::returnStmt()
{
	std::shared_ptr<CToken> keyword = previous();
	std::shared_ptr<CExpr> value = nullptr;
	if (!check(CTokenType::SEMICOLON))
	{
		value = expression();
	}

	consume(CTokenType::SEMICOLON, "[parser:0801] Expect ';' after return statement.");
	return std::make_shared<CStmt_Return>(keyword, value);
}

std::shared_ptr<CStmt> CParser::breakStmt()
{
	std::shared_ptr<CToken> keyword = previous();
	consume(CTokenType::SEMICOLON, "[parser:0901] Expect ';' after break statement.");
	return std::make_shared<CStmt_Break>(keyword);
}

std::shared_ptr<CStmt> CParser::continueStmt()
{
	std::shared_ptr<CToken> keyword = previous();
	consume(CTokenType::SEMICOLON, "[parser:1001] Expect ';' after break statement.");
	return std::make_shared<CStmt_Continue>(keyword);
}

std::shared_ptr<CStmt> CParser::tryCatchStmt()
{
	std::shared_ptr<CToken> line = previous();
	consume(CTokenType::CURLY_LEFT, "[parser:1101] Expected opening bracket '{' after try statement.");
	std::shared_ptr<CStmt> tryBlock = block();
	consume(CTokenType::CATCH, "[parser:1102] Expected catch statement after try block.");
	consume(CTokenType::CURLY_LEFT, "[parser:1103] Expected opening bracket '{' after catch statement.");
	std::shared_ptr<CStmt> catchBlock = block();
	return std::make_shared<CStmt_TryCatch>(tryBlock, catchBlock, line);
}

std::shared_ptr<CStmt> CParser::ifStmt()
{
	std::shared_ptr<CToken> line = previous();
	consume(CTokenType::PAREN_LEFT, "[parser:1201] Expect opening '(' after 'if'.");
	std::vector<std::shared_ptr<CExpr>> conditionsList; 
	conditionsList.emplace_back(expression());
	consume(CTokenType::PAREN_RIGHT, "[parser:1202] Expect closing ')' after 'if' condition");

	std::vector<std::shared_ptr<CStmt>> executionList;
	executionList.emplace_back(statement());
	std::shared_ptr<CStmt> elseBranch = nullptr;
	while (match({ CTokenType::ELSE }))
	{
		if (peek().get()->type == CTokenType::IF)
		{
			advance();
			consume(CTokenType::PAREN_LEFT, "[parser:1203] Expect opening '(' after 'else if'.");
			conditionsList.emplace_back(expression());
			consume(CTokenType::PAREN_RIGHT, "[parser:1204] Expect closing ')' after 'else if' condition");
			executionList.emplace_back(statement());
		}
		else
		{
			elseBranch = statement();
		}
		
	}

	return std::make_shared<CStmt_If>(conditionsList, executionList, elseBranch, line);
}

std::shared_ptr<CStmt> CParser::whileStmt()
{
	std::shared_ptr<CToken> line = previous();
	consume(CTokenType::PAREN_LEFT, "[parser:1301] Expect opening '(' after 'while'.");
	std::shared_ptr<CExpr> condition = expression();
	consume(CTokenType::PAREN_RIGHT, "[parser:1302] Expect closing ')' after 'while' condition");
	std::shared_ptr<CStmt> body = statement();

	return std::make_shared<CStmt_While>(condition, body, line);
}

std::shared_ptr<CStmt> CParser::forStmt()
{
	std::shared_ptr<CToken> line = previous();
	consume(CTokenType::PAREN_LEFT, "[parser:1401] Expect opening '(' after 'for'.");
	// Establish the initializer statement
	std::shared_ptr<CStmt> initializer;
	if (match({ CTokenType::SEMICOLON }))
	{
		initializer = nullptr;
	}
	else if (isValidVarType(peek()))
	{
		std::shared_ptr<CToken> typeSpecifier = createTypeSpecifier(peek());
		if (isArrayType(typeSpecifier))
		{
			initializer = arrayDeclarationStmt(typeSpecifier);
		}
		else
		{
			initializer = varDeclarationStmt(typeSpecifier);
		}
	}
	else
	{
		initializer = expressionStmt(false);
	}

	// Establish the condition statement
	std::shared_ptr<CExpr> condition = nullptr;
	if (!check(CTokenType::SEMICOLON))
	{
		condition = expression();
	}
	consume(CTokenType::SEMICOLON, "[parser:1402] Expect ';' after for condition expression.");

	// Establish the increment statement
	std::shared_ptr<CExpr> increment = nullptr;
	if (!check(CTokenType::PAREN_RIGHT))
	{
		increment = expression();
	}
	consume(CTokenType::PAREN_RIGHT, "[parser:1403] Expect ')' after for clauses.");

	// Establish the body statement
	std::shared_ptr<CStmt> body = statement();

	return std::make_shared<CStmt_For>(initializer, condition, increment, body, line);
}

std::shared_ptr<CStmt> CParser::foreachStmt()
{
	std::shared_ptr<CToken> line = previous();
	std::shared_ptr<CToken> typeSpecifier = nullptr;
	std::shared_ptr<CToken> iteratorName = nullptr;
	std::shared_ptr<CExpr> listExpression = nullptr;
	std::shared_ptr<CStmt> body = nullptr;
	consume(CTokenType::PAREN_LEFT, "[parser:1501] Expect opening '(' after 'foreach'.");
	if (isValidVarType(peek()))
	{
		typeSpecifier = createTypeSpecifier(peek());
		iteratorName = consume(CTokenType::IDENTIFIER, "[parser:1502] Expected identifier name for iterator after variable type.");
		consume(CTokenType::COLON, "[parser:1503] Expected ':' separator between iterator declaration and container expression.");
		listExpression = expression();
		consume(CTokenType::PAREN_RIGHT, "[parser:1504] Expected closing brace ')' after container expression in foreach statement.");
		body = statement();
	}
	else
	{
		error(peek(), "[parser:1504] For Each loop must contain iterator declaration of valid variable type.");
	}
	return std::make_shared<CStmt_Foreach>(typeSpecifier, iteratorName, listExpression, body, line);
}

std::shared_ptr<CStmt> CParser::block()
{
	std::shared_ptr<CToken> line = previous();
	std::vector<std::shared_ptr<CStmt>> statements;
	while (!check(CTokenType::CURLY_RIGHT) && !isAtEnd())
	{
		statements.push_back(declarationStmt());
	}
	consume(CTokenType::CURLY_RIGHT, "[parser:1601] Expect '}' after declaring block.");
	
	return std::make_shared<CStmt_Block>(statements, line);
}


std::shared_ptr<CStmt> CParser::expressionStmt(bool ignoreSemicolon)
{
	std::shared_ptr<CExpr> expr = expression();
	if (!ignoreSemicolon)
	{
		consume(CTokenType::SEMICOLON, "[parser:1701] Expected ';' after expression.");
	}
	std::shared_ptr<CToken> line = previous();
	std::shared_ptr<CStmt_Expression> outbound = std::make_shared<CStmt_Expression>(expr, line);
	return outbound;
}

////////////////////////////////////////////////////////////////////////////////////////////////
//
// chromaParser Expression Eval Functions
//
////////////////////////////////////////////////////////////////////////////////////////////////

std::shared_ptr<CExpr> CParser::expression()
{
	return assignment();
}
std::shared_ptr<CExpr> CParser::assignment()
{
	std::shared_ptr<CExpr> expr = logicalOr();
	if (match({ CTokenType::ASSIGN, 
		CTokenType::ASSIGN_ADD, 
		CTokenType::ASSIGN_DIVIDE, 
		CTokenType::ASSIGN_MULTIPLY, 
		CTokenType::ASSIGN_SUBTRACT }))
	{
		std::shared_ptr<CToken> _operator = previous();
		std::shared_ptr<CExpr> value = assignment();

		return std::make_shared<CExpr_Assign>(expr, _operator, value);
	}

	return expr;
}
std::shared_ptr<CExpr> CParser::logicalOr()
{
	std::shared_ptr<CExpr> expr = logicalAnd();

	while (match({ CTokenType::LOGIC_OR }))
	{
		std::shared_ptr<CToken> _operator = previous();
		std::shared_ptr<CExpr> right = logicalAnd();
		expr = std::make_shared<CExpr_Logical>(expr, _operator, right);
	}

	return expr;
}
std::shared_ptr<CExpr> CParser::logicalAnd()
{
	std::shared_ptr<CExpr> expr = equality();

	while (match({ CTokenType::LOGIC_AND }))
	{
		std::shared_ptr<CToken> _operator = previous();
		std::shared_ptr<CExpr> right = equality();
		expr = std::make_shared<CExpr_Logical>(expr, _operator, right);
	}

	return expr;
}
std::shared_ptr<CExpr> CParser::equality()
{
	std::shared_ptr<CExpr> expr = comparison();

	while (match({ CTokenType::EQUAL, CTokenType::NOT_EQUAL }))
	{
		std::shared_ptr<CToken> _operator = previous();
		std::shared_ptr<CExpr> right = comparison();
		expr = std::make_shared<CExpr_Binary>(expr, _operator, right);
	}

	return expr;
}
std::shared_ptr<CExpr> CParser::comparison()
{
	std::shared_ptr<CExpr> expr = term();

	if (match({ CTokenType::APPROXIMATE }))
	{
		if (peek().get()->type == CTokenType::PAREN_LEFT)
		{
			consume(CTokenType::PAREN_LEFT, "[parser:1801] Expected opening brace '(' after '~=' approximate operator.");
			return approximate(expr);
		}
		else
		{
			console.get()->error(peek(), "[parser:1802] Invalid occurence of '?' validate operator.");
		}
	}

	while (match({ CTokenType::MORE, CTokenType::MORE_EQUAL, CTokenType::LESS, CTokenType::LESS_EQUAL }))
	{
		std::shared_ptr<CToken> _operator = previous();
		std::shared_ptr<CExpr> right = term();
		expr = std::make_shared<CExpr_Binary>(expr, _operator, right);
	}

	return expr;
}
std::shared_ptr<CExpr> CParser::approximate(std::shared_ptr<CExpr> left)
{
	std::shared_ptr<CExpr> value = expression();
	std::shared_ptr<CToken> line = consume(CTokenType::PAREN_RIGHT, "[parser:1901] Expected closing brace ')' after expression in '~=' approximate operator.");
	std::shared_ptr<CExpr> right = term();
	return std::make_shared<CExpr_Approximate>(left, value, right, line);
}
std::shared_ptr<CExpr> CParser::term()
{
	std::shared_ptr<CExpr> expr = factor();

	while (match({ CTokenType::MINUS, CTokenType::PLUS }))
	{
		std::shared_ptr<CToken> _operator = previous();
		std::shared_ptr<CExpr> right = factor();
		expr = std::make_shared<CExpr_Binary>(expr, _operator, right);
	}

	return expr;
}
std::shared_ptr<CExpr> CParser::factor()
{
	std::shared_ptr<CExpr> expr = exponent();

	while (match({ CTokenType::MODULO, CTokenType::DIVIDE, CTokenType::MULTIPLY }))
	{
		std::shared_ptr<CToken> _operator = previous();
		std::shared_ptr<CExpr> right = exponent();
		expr = std::make_shared<CExpr_Binary>(expr, _operator, right);
	}

	return expr;
}
std::shared_ptr<CExpr> CParser::exponent()
{
	std::shared_ptr<CExpr> expr = scope();

	while (match({ CTokenType::POWER }))
	{
		std::shared_ptr<CToken> _operator = previous();
		std::shared_ptr<CExpr> right = scope();
		expr = std::make_shared<CExpr_Binary>(expr, _operator, right);
	}

	return expr;
}
std::shared_ptr<CExpr> CParser::scope()
{
	std::vector<std::shared_ptr<CToken>> scopeStack;
	std::shared_ptr<CToken> line = nullptr;
	while (peek().get()->type == CTokenType::IDENTIFIER && scry(1).get()->type == CTokenType::SCOPE)
	{
		advance();
		line = previous();
		scopeStack.push_back(previous());
		advance();
	}
	if (!scopeStack.empty())
	{
		std::shared_ptr<CExpr> right = typeCast();
		return std::make_shared<CExpr_Scope>(std::make_shared<std::vector<std::shared_ptr<CToken>>>(scopeStack), right, line);
	}
